# Ejercicios_POO_Parejas

./: README.md  main.py  pyproject.toml
Clases/: Instancia.py  Logger.py  Palindromo.py  Puzzle.py
Ejercicio1/Clases/: Palindromo.py
UML/: Ejercicio1.drawio  Ejercicio2.drawio  Ejercicio3.drawio  Ejercicio4.drawio
