[tool.poetry]
name = "repl_python3_beta_EjerciciosPOOParejas"
version = "0.1.0"
description = ""
authors = ["mat0ta <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
